# dice_applet

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/changelog/: v0.1.0.md  v0.2.2.md  v0.2.3.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.4.0.md
docs/claude/: IDEAS.md  ROADMAP.md  fastapi_nuc_setup.md  local_test_environment.md  milestone_1_deployment_steps.md  milestone_1_plan.md  milestone_2_1_plan.md  milestone_3_plan.md  milestone_4_plan.md
frontend/: index.html
frontend/api/: index.php
frontend/css/: style.css
frontend/js/: app.js  config.js  graph-mock-data.js  graph.js  i18n.js  router.js  student.js  teacher.js
migrations/: env.py
migrations/versions/: 638214c31b7d_initial_schema.py  b0ab4e9460bd_milestone_2_1_auth_and_schools.py
scripts/: bootstrap_test_classroom.py
src/dice_applet/: config.py  main.py
src/dice_applet/db/: base.py  models.py
src/dice_applet/routers/: admin.py  auth.py  classroom.py  student.py  student_data.py  teacher.py
src/dice_applet/schemas/: admin.py  auth.py  classroom.py  student.py  teacher.py
src/dice_applet/services/: animals.py  auth.py  student_data.py
tests/: conftest.py  test_admin.py  test_auth.py
